--- a/css/monitoring.css
+++ b/css/monitoring.css
@@ -58,41 +58,31 @@
 
 .devices-con p {
     text-align: center;
-    font-size: 18px;
     margin: 5px 0 0 0;
 }
-.temp-text p {
+.temp-title {
+    font-size: 18px;
     color: #F3AE9F;
 }
-.temp-text i, .temp-text div {
-    float: left;
+.temp {
+    font-size: 54px;
+    color: #F9EEEB;
 }
 .fa-thermometer-half {
     font-size: 48px;
     color: #F3AE9F;
-    margin: 16px;
+    margin-right: 18px;
 }
-.temp-value-box, .humi-value-box {
-    margin: 10px 28%;
-}
-.temp-value-box div {
-    float: left;
-    font-size: 56px;
-    color: #F9EEEB;
-}
-.humi-text p {
+.humi-title {
+    font-size: 18px;
     color: #AEB0FF;
-}
-.humi-text i, .humi-text div {
-    float: left;
 }
 .fa-tint {
     font-size: 48px;
     color: #AEB0FF;
-    margin: 16px 10px;
+    margin-right: 18px;
 }
-.humi-value-box div {
-    float: left;
-    font-size: 56px;
+.humi {
+    font-size: 54px;
     color: #EBECFB;
 }
