--- a/css/report.css
+++ b/css/report.css
@@ -100,6 +100,7 @@
     width: 100%;
     height: fit-content;
     padding: 4px;
+    margin: 20px 0;
     background-color: rgb(241, 241, 241);
     box-shadow: 5px 5px 8px 3px rgba(0,0,0,0.19);
 }
