--- a/css/report.css
+++ b/css/report.css
@@ -12,6 +12,18 @@
     padding: 20px;
     float: left;
 }
+.goBack {
+    color: #E35F43;
+    float: right;
+    padding: 16px 28px;
+    margin-right: 12px;
+    background-color: rgb(230, 228, 228);
+}
+.goBack:hover {
+    color: #E35F43;
+    cursor: pointer;
+    opacity: 0.8;
+}
 .refresh {
     color: #E35F43;
     float: right;
