--- a/css/report.css
+++ b/css/report.css
@@ -14,7 +14,7 @@
 }
 .goBack {
     color: #E35F43;
-    float: right;
+    float: left;
     padding: 16px 28px;
     margin-right: 12px;
     background-color: rgb(230, 228, 228);
