--- a/css/navbar.css
+++ b/css/navbar.css
@@ -61,6 +61,9 @@ body {
     padding: 0px;
     margin-left: 28px;
 }
+.icon {
+    padding: 6px;
+}
   
 @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
@@ -76,10 +79,14 @@ body {
         position: absolute;
         right: 0;
         top: 0;
-}
+    }
     .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
+        font-size: 18px;
+    }
+    #logo {
+        width: 48px;
     }
 }
