--- a/css/report.css
+++ b/css/report.css
@@ -35,22 +35,24 @@
     cursor: pointer;
     opacity: 0.8;
 }
+.clockIcon {
+    padding: 18px 0;
+}
 
 .devi-block {
     width: 100%;
     margin: 14px 0;
     display: inline-block;
 }
-.devi-block:hover {
-    opacity: 0.9;
-    cursor: pointer;
-    /* box-shadow: 5px 5px 34px 1px #616161; */
-}
 
 .fa-laptop-code {
     float: left; 
     font-size: 34px;
-    padding: 20px 20px;
+    padding: 16px 16px;
+}
+.fa-clock {
+    font-size: 14px;
+    padding-left: 10px;
 }
 .devi-head div {
     font-size: 30px;
@@ -143,4 +145,76 @@
 .ex-btn:hover {
     background-color: #0c7433;
     color: white;
+}
+
+.timeDuration {
+    float: right;
+    font-size: 16px;
+    padding: 4px 12px;
+    margin: 12px 4px;
+    color: #E35F43;
+    background-color: white;
+    border: 1px solid #E35F43;
+    border-radius: 3px;
+}
+
+#dayDuration {
+    background-color: #E35F43;
+    color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .head-con {
+        margin: 8px 0;
+    }
+    .fa-laptop-code {
+        font-size: 30px;
+        padding: 14px 6px;
+    }
+    .clockIcon {
+        padding: 14px 0;
+    }
+    .fa-clock {
+        padding-left: 0;
+    }
+    .refresh {
+        padding: 10px 20px;
+    }
+    .devi-block {
+        margin-bottom: 4px;
+    }
+    #dName {
+        font-size: 20px;
+        padding: 16px 10px;
+    }
+    #lastTime {
+        font-size: 20px;
+        padding: 16px 10px;
+    }
+    .temp, .humi {
+        font-size: 30px;
+    }
+    .temp i, .humi i {
+        font-size: 28px;
+    }
+    .ex-title {
+        width: 50%;
+        font-size: 18px;
+        margin: 10px 14px;
+        vertical-align: middle;
+    }
+    .export-con i {
+        font-size: 30px;
+    }
+    .ex-btn {
+        margin: 16px 16px 16px 10px;
+        padding: 4px 10px;
+        font-size: 18px;
+    }
+    .timeDuration {
+        font-size: 14px;
+        width: 30%;
+        margin: 8px 4px;
+        color: #E35F43;
+    }
 }
