--- a/css/report.css
+++ b/css/report.css
@@ -147,8 +147,15 @@
     color: white;
 }
 
-.timeDuration, .getTimeBtn {
+.calendarTime {
+    width: fit-content;
     float: right;
+}
+.btnTime {
+    width: fit-content;
+    float: right;
+}
+.timeDuration, .getTimeBtn {
     font-size: 16px;
     padding: 4px 12px;
     margin: 12px 4px;
@@ -158,7 +165,6 @@
     border-radius: 3px;
 }
 .timeSet input {
-    float: right;
     font-size: 16px;
     padding: 3px 10px;
     margin: 12px 4px;
@@ -167,15 +173,11 @@
     border-radius: 3px;
 } 
 .timeSet label {
-    float: right;
     font-size: 16px;
     padding: 2px 2px;
     margin: 14px 4px 14px 18px;
     color: #E35F43;
 } 
-.getTime {
-    width: fit-content;
-}
 .getTimeBtn:hover {
     color: white;
     background-color: #E35F43;
@@ -236,13 +238,9 @@
     }
     .timeDuration {
         font-size: 14px;
-        width: 30%;
         margin: 6px 4px 10px 4px;
     }
-    .timeSet label {
-        display: none;
-    }
-    .timeSet input, #calc {
+    .timeSet input, .timeSet label, #calc {
         font-size: 14px;
         margin: 6px 4px;
     }
