--- a/css/monitoring.css
+++ b/css/monitoring.css
@@ -51,23 +51,36 @@
     display: inline-block;
     box-shadow: 5px 5px 11px -2px #616161;
 }
-.devi-block:hover {
-    opacity: 0.9;
-    cursor: pointer;
-    box-shadow: 5px 5px 34px 1px #646464;
-}
 
 .fa-laptop-code {
     float: left; 
     font-size: 34px;
     padding: 20px 20px;
 }
-.devi-head div {
+.fa-trash-alt {
+    float: right; 
+    font-size: 24px;
+    padding: 24px 30px;
+    z-index: -1;
+}
+.fa-trash-alt:hover {
+    color: #e01818;
+    cursor: pointer;
+}
+
+.device-name {
+    display: inline-block;
     font-size: 30px;
     color: #E35F43;
     padding: 16px;
 }
+.device-name:hover {
+    opacity: 0.9;
+    cursor: pointer;
+    text-decoration: underline;
+}
 .devi-head {
+    width: 100%;
     background-color: rgb(236, 236, 236);
     height: fit-content;
 }
