--- a/css/report.css
+++ b/css/report.css
@@ -127,23 +127,23 @@
     margin-left: 20px;
 }
 .ex-title {
-    font-size: 24px;
-    margin: 20px;
+    font-size: 22px;
+    margin: 16px;
     color: #E35F43;
 }
 
-.ex-btn {
+.sh-btn {
     float: right;
-    font-size: 24px;
+    font-size: 22px;
     margin: 12px 20px;
-    padding: 6px 38px;
-    border: 2px solid #0c7433;
+    padding: 2px 38px;
+    border: 2px solid #9c9c9c;
     border-radius: 4px;
     background-color: white;
-    color: #0c7433;
+    color: #9c9c9c;
 }
-.ex-btn:hover {
-    background-color: #0c7433;
+.sh-btn:hover {
+    background-color: #9c9c9c;
     color: white;
 }
 
@@ -187,6 +187,96 @@
     background-color: #E35F43;
     color: white;
 }
+.tbl-con {
+    width: 100%;
+    overflow-y: scroll;
+    height: 660px;
+    padding: 20px 24px;
+    margin-bottom: 20px;
+    background-color: rgb(248, 248, 248);
+    box-shadow: 5px 5px 8px 3px rgba(0,0,0,0.19);
+}
+.table2excel {
+    border-collapse: collapse;
+    width: 100%;
+    table-layout: fixed;
+    overflow-wrap: break-word;
+    font-size: 16px;
+}
+.table2excel th, .table2excel td {
+    padding: 6px 10px;
+    text-align: center;
+}
+.table2excel th {
+    background-color: rgb(221, 135, 118);
+    color: white;
+}
+.table2excel td {
+    color: #646464;
+}
+.table2excel tr:hover {
+    background-color: #fde1dc;
+}
+table tr td:nth-child(1) {
+    width: 5%;
+}
+table tr td:nth-child(2) {
+    width: 10%;
+}
+table tr td:nth-child(3) {
+    width: 20%;
+}
+table tr td:nth-child(4) {
+    width: 10%;
+    color: #e45231;
+}
+table tr td:nth-child(5) {
+    width: 10%;
+    color: #4244c4;
+}
+tr:nth-child(even) {
+    background-color: #f7e9e6;
+}
+
+.dropdown {
+    float: right;
+    margin-left: 14px;
+}
+.dropbtn i {
+    font-size: 26px;
+}
+.dropbtn {
+    color: #E35F43;
+    padding: 13px 28px;
+    background-color: rgb(230, 228, 228);
+    cursor: pointer;
+    border: none;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    opacity: 0.8;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: rgb(92, 92, 92);
+    font-size: 16px;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
 
 @media screen and (max-width: 600px) {
     .head-con {
