improved export function

--- a/css/report.css
+++ b/css/report.css
@@ -274,7 +274,10 @@ tr:nth-child(even) {
     display: block;
 }
   
-.dropdown a:hover {background-color: #ddd;}
+.dropdown a:hover {
+    background-color: #ddd;
+    cursor: pointer;
+}
 
 .show {display: block;}
 
