--- a/css/report.css
+++ b/css/report.css
@@ -133,7 +133,6 @@
 }
 
 .sh-btn {
-    float: right;
     font-size: 22px;
     margin: 12px 20px;
     padding: 2px 38px;
@@ -196,6 +195,24 @@
     background-color: #E35F43;
     color: white;
 }
+
+.tbl-range-con {
+    float: right;
+}
+.tbl-range-con div {
+    display: inline-block;
+}
+.tbl-range-con div label {
+    color: #E35F43;
+}
+.tbl-range-con div input[type=date] {
+    color: #E35F43;
+    border: 1px solid #E35F43;
+    border-radius: 4px;
+    padding: 2px;
+    margin-right: 6px;
+}
+
 .tbl-con {
     width: 100%;
     overflow-y: scroll;
@@ -230,21 +247,22 @@ table tr td:nth-child(1) {
     width: 5%;
 }
 table tr td:nth-child(2) {
-    width: 10%;
-}
-table tr td:nth-child(3) {
     width: 20%;
 }
-table tr td:nth-child(4) {
+table tr td:nth-child(3) {
     width: 10%;
     color: #e45231;
 }
-table tr td:nth-child(5) {
+table tr td:nth-child(4) {
     width: 10%;
     color: #4244c4;
 }
 tr:nth-child(even) {
     background-color: #f7e9e6;
+}
+
+#showChart {
+    float: right;
 }
 
 .dropdown {
@@ -367,5 +385,27 @@ tr:nth-child(even) {
     }
     .getTimeBtn {
         float: right;
+    }
+    .tbl-range-con {
+        float: none;
+        display: inline-block;
+    }
+    .tbl-range-con div {
+        padding: 10px;
+    }
+    .tbl-range-con div input[type=date] {
+        width: 83%;
+        margin: 4px;
+    }
+    .tbl-range-con div input[type=checkbox] {
+        display: inline-block;
+        margin: 4px 4px 4px 48px; 
+    }
+    #showTable {
+        float: right;
+        margin: 0px 14px 14px 0;
+    }
+    #label-tbl_to {
+        margin-right: 5px;
     }
 }
