--- a/css/monitoring.css
+++ b/css/monitoring.css
@@ -150,7 +150,7 @@
         font-size: 18px;
     }
     #lastTime {
-        padding: 18px 10px;
+        padding: 8px 10px;
         font-size: 18px;
     }
     .clockIcon {
@@ -186,5 +186,8 @@
     .fa-trash-alt {
         font-size: 20px;
         padding: 16px 20px;
+    }
+    .view-con {
+        font-size: 11px;
     }
 }
